Developmental Features - Added an admin endpoint with a form, began implementing proper validation logic - Fixed blogs endpoint to column flex div, added overflow

--- a/styles/generics.module.css
+++ b/styles/generics.module.css
@@ -1,4 +1,6 @@
 .pageBackground{
     background-color: aliceblue;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
   }
+
